# claude-code-telegram

./: CLAUDE.md  Makefile  README.md  SYSTEMD_SETUP.md  noxfile.py  pyproject.toml
.claude/handoffs/: claude-code-telegram-2026-02-19T124911.md  claude-code-telegram-2026-02-19T130449.md  claude-code-telegram-2026-02-19T132301.md  claude-code-telegram-2026-02-19T142316.md  claude-code-telegram-2026-02-20T083115.md  claude-code-telegram-2026-02-20T090218.md
config/: memory.example.md  profile.example.md  soul.example.md
deploy/: backup-config.sh  bot.service  log-monitor.service  log_monitor.py  notify-start.sh  watchdog.service  watchdog.sh
docs/: configuration.md  development.md  project-overview.md  setup.md
src/: main.py
src/api/: auth.py  server.py
src/bot/: core.py  onboarding.py  orchestrator.py  settings_registry.py  settings_ui.py  status_builder.py
src/bot/features/: conversation_mode.py  file_handler.py  git_integration.py  image_handler.py  quick_actions.py  registry.py  session_export.py  voice_handler.py
src/bot/handlers/: callback.py  command.py  message.py
src/bot/middleware/: auth.py  rate_limit.py  security.py
src/bot/utils/: formatting.py  html_format.py
src/claude/: __init__.py  exceptions.py  facade.py  integration.py  monitor.py  parser.py  sdk_integration.py  session.py
src/config/: environments.py  features.py  loader.py  profile.py  settings.py  soul.py  toml_source.py  toml_template.py  wizard.py
src/events/: bus.py  handlers.py  types.py
src/memory/: __init__.py  embeddings.py  file_manager.py  manager.py
src/notifications/: service.py
src/projects/: registry.py  thread_manager.py
src/scheduler/: checkin.py  scheduler.py
src/security/: audit.py  auth.py  rate_limiter.py  validators.py
src/storage/: database.py  facade.py  models.py  repositories.py  session_storage.py
src/utils/: constants.py
tests/: conftest.py
tests/unit/: test_config.py  test_orchestrator.py  test_toml_source.py  test_toml_template.py
tests/unit/test_api/: test_server.py
tests/unit/test_bot/: test_formatting.py  test_middleware.py  test_thread_mode_handlers.py
tests/unit/test_claude/: test_facade.py  test_monitor.py  test_sdk_integration.py  test_session.py
tests/unit/test_notifications/: test_service.py
(+8 files in other folders)
