[project]
name = "claude-code-telegram"
version = "1.1.0"
description = "Telegram bot for remote Claude Code access with comprehensive configuration management"
authors = [{name = "Richard Atkinson", email = "richardatk01@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["telegram", "bot", "claude", "ai", "development", "remote", "coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: System :: Shells",
]
dependencies = [
    "python-telegram-bot>=22.6",
    "structlog>=25.4.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.38",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "apscheduler>=3.10",
    "PyYAML>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/richardatkinson/claude-code-telegram"
Repository = "https://github.com/richardatkinson/claude-code-telegram"
Documentation = "https://github.com/richardatkinson/claude-code-telegram/blob/main/docs/"

[project.scripts]
claude-telegram-bot = "src.main:run"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.9.0",
    "ty>=0.0.1a6",
    "nox>=2024.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.ty.environment]
python-version = "3.11"
